[package]
name = "pvvortex"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
default = []
pyo3 = ["pyo3/extension-module"]

[dependencies]
flate2 = { version = "1.0", features = ["zlib"] }
pyo3 = { version = "0.20", optional = true }
regex = "1"
reqwest = { version = "0.12", features = ["blocking"] }
thiserror = "1"
url = "2"
