[package]
name = "pvstream"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
pyo3 = ["pyo3/extension-module"]

[dependencies]
arrow2 = { version = "0.18", features = ["io_parquet"] }
flate2 = { version = "1.0", features = ["zlib"] }
pyo3 = { version = "0.20", optional = true }
regex = "1"
reqwest = { version = "0.12", features = ["blocking"] }
thiserror = "1"
url = "2"

[tool.maturin]
bindings = "pyo3"
features = ["pyo3"]
