[package]
name = "pvstream"
version = "0.1.0"
edition = "2024"
description = "Stream download, parse, and filter Wikimedia pageviews files"
license = "MIT"
repository = "https://github.com/vegardege/pvstream"
readme = "README.md"
keywords = ["wikimedia", "pageviews"]
categories = ["parser-implementations"]
exclude = [
    ".github/",
    ".vscode/",
    "*.pyc",
    "__pycache__/",
    "Cargo.lock",
    "*.orig",
]

[lib]
name = "pvstream"
crate-type = ["cdylib", "rlib"]

[features]
default = []
pyo3 = ["pyo3/extension-module"]

[dependencies]
arrow2 = { version = "0.18", features = ["io_parquet"] }
flate2 = { version = "1.0", features = ["zlib"] }
pyo3 = { version = "0.26", optional = true }
regex = "1"
reqwest = { version = "0.12", features = ["blocking"] }
thiserror = "1"
url = "2"

[tool.maturin]
bindings = "pyo3"
features = ["pyo3"]
