[project]
name = "pvstream"
version = "0.1.0"
description = "Stream download, filter, and parse Wikimedia pageviews files"
authors = [{ name = "Vegard Egeland", email = "vegardegeland@gmail.com" }]
requires-python = ">=3.8"
license = "MIT License"
readme = "README.md"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
